app/index.css
/* preset */
body {
	width: 100%;
	height: 100vh;
	margin: 0;
	padding: 0;
	font-family: 'Merriweather Sans', sans-serif;
	background-image: url('https://images.unsplash.com/photo-1504019478087-6659e5eb849c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=efa8c72af7fc8803800cff02806a6c63&auto=format&fit=crop&w=1500&q=80');
	background-repeat: no-repeat;
	background-size: cover;
}
h1,
h2,
h3,
p {
	margin: 0;
	padding: 0;
}
#root {
	height: 100vh;
	display: flex;
}

li {
	list-style: none;
}
button,
input {
	outline: none;
}
/* module*/

.Title {
	text-align: center;
	font-size: 1.5em;
	text-shadow: 1.5px 1.5px 2px #191919;
	color: #03c6f4;
	letter-spacing: 1px;
	font-weight: 700;
	margin-bottom: 2rem;
}

/* Catergoy */
.button-add {
	float: right;
	font-size: 1.6rem;
	width: 35px;
	height: 35px;
	color: white;
	font-weight: 800;
	background-color: #03c6f4;
	border-radius: 50%;
	border: none;
	cursor: pointer;
}

.category-div {
	height: 1.8rem;
	border-bottom: 0.2rem transparent solid;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}
.category-text {
	font-weight: 700;
	font-size: 1.1rem;
	color: white;
	display: inline;
	text-shadow: 1.5px 1.5px 2px #191919;
}
.form {
	margin-top: auto;
	/* border: 1px red solid; */
}

/* Todo */
.desc {
	font-size: 0.8rem;
}
.todo-name {
	font-size: 2rem;
}
.list-todo {
	display: flex;
	flex-direction: row;
}
.checkbox {
	display: inline;
	font-size: 1.6rem;
	color: #393939;
	background-color: transparent;
	border: 0;
}

/* Optional */

/* left */
.input-field {
	width: 80%;
	color: white;
	outline: none;
	border: none;
	border-bottom: 1.4px solid #ddd;
	font-size: 1.1rem;
	background: transparent;
	height: 1.4rem;
}

.delete-child {
	/* display: none; */
}

/* right */
.complete {
	color: #cacaca;
}

